--- a/index.html
+++ b/index.html
@@ -17,6 +17,31 @@
 
   <!-- AOS Animation -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- Open Graph / WhatsApp Preview -->
+<meta property="og:title" content="Yash | Portfolio" />
+<meta property="og:description" content="Hey 👋 I'm Yash, a BCA student passionate about app development, data science, and problem-solving. Check out my portfolio!" />
+<meta property="og:image" content="https://yashyadav2430278.github.io/portfolio/preview.png" />
+<meta property="og:url" content="https://yashyadav2430278.github.io/portfolio/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card (extra, works on LinkedIn too) -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Yash | Portfolio" />
+<meta name="twitter:description" content="Aspiring Developer | App Development | Data Science | Problem Solver" />
+<meta name="twitter:image" content="https://yashyadav2430278.github.io/portfolio/preview.png" />
+<!-- Open Graph / WhatsApp Preview -->
+<meta property="og:title" content="Yash | Portfolio" />
+<meta property="og:description" content="Hey 👋 I'm Yash, a BCA student passionate about app development, data science, and problem-solving. Check out my portfolio!" />
+<meta property="og:image" content="https://yashyadav2430278.github.io/portfolio/preview.png" />
+<meta property="og:url" content="https://yashyadav2430278.github.io/portfolio/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card (works on LinkedIn too) -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Yash | Portfolio" />
+<meta name="twitter:description" content="Aspiring Developer | App Development | Data Science | Problem Solver" />
+<meta name="twitter:image" content="https://yashyadav2430278.github.io/portfolio/preview.png" />
+
 </head>
 <body>
   <!-- ===== HEADER ===== -->
@@ -183,3 +208,4 @@
   </script>
 </body>
 </html>
+
